fixes off centering

--- a/client/src/views/learn/articles.css
+++ b/client/src/views/learn/articles.css
@@ -19,12 +19,12 @@
 }
 
 .test {
-    /* background-color: red;  */
+    background-color: red; 
     margin-bottom: 5px;
     margin-top: 5px;
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
-    align-items: flex-start;
+    justify-content: center;
+    align-items: center;
     padding-left: 10px;
 }
